# ChangeLog for sys-apps/accountsservice
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/accountsservice/ChangeLog,v 1.48 2014/11/02 09:41:08 swift Exp $

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> accountsservice-0.6.37.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

  01 Nov 2014; Pacho Ramos <pacho@gentoo.org> -accountsservice-0.6.29-r1.ebuild,
  -accountsservice-0.6.35.ebuild,
  -files/accountsservice-0.6.21-gentoo-system-users.patch,
  -files/accountsservice-0.6.29-32bit-crash.patch,
  -files/accountsservice-0.6.34-gentoo-system-users.patch,
  -files/accountsservice-0.6.35-nondelete-root.patch,
  -files/accountsservice-0.6.35-older-glib.patch,
  -files/accountsservice-0.6.35-user-logic.patch, metadata.xml:
  Drop old

  05 Sep 2014; Mikle Kolyada <zlogene@gentoo.org> accountsservice-0.6.37.ebuild:
  ppc/ppc64 stable wrt bug #518014

  20 Jun 2014; Agostino Sarubbo <ago@gentoo.org> accountsservice-0.6.37.ebuild:
  Stable for arm, wrt bug #508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> accountsservice-0.6.37.ebuild:
  x86 stable, bug 508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> accountsservice-0.6.37.ebuild:
  amd64 stable, bug 508862

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -accountsservice-0.6.34.ebuild:
  drop old

*accountsservice-0.6.37 (25 Apr 2014)

  25 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +accountsservice-0.6.37.ebuild:
  Version bump.

  18 Apr 2014; Sven Vermeulen <swift@gentoo.org>
  accountsservice-0.6.29-r1.ebuild, accountsservice-0.6.34.ebuild,
  accountsservice-0.6.35.ebuild:
  Depend on selinux-accountsd if USE=selinux

  29 Mar 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  accountsservice-0.6.34.ebuild, accountsservice-0.6.35.ebuild:
  systemd now has subslots

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> accountsservice-0.6.35.ebuild:
  Fix wrong commit, bug 502160
