@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
+DEPEND=>=dev-libs/glib-2.37.3:2 sys-auth/polkit introspection? ( >=dev-libs/gobject-introspection-0.9.12 ) systemd? ( >=sys-apps/systemd-186:0= ) !systemd? ( sys-auth/consolekit ) dev-libs/libxslt dev-util/gdbus-codegen >=dev-util/gtk-doc-am-1.15 >=dev-util/intltool-0.40 sys-devel/gettext virtual/pkgconfig doc? ( app-text/docbook-xml-dtd:4.1.2 app-text/xmlto ) app-arch/xz-utils >=sys-apps/sed-4 virtual/pkgconfig
+DESCRIPTION=D-Bus interfaces for querying and manipulating user account information
+EAPI=5
+HOMEPAGE=http://www.freedesktop.org/wiki/Software/AccountsService/
+IUSE=doc +introspection selinux systemd
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-3+
+RDEPEND=>=dev-libs/glib-2.37.3:2 sys-auth/polkit introspection? ( >=dev-libs/gobject-introspection-0.9.12 ) systemd? ( >=sys-apps/systemd-186:0= ) !systemd? ( sys-auth/consolekit ) selinux? ( sec-policy/selinux-accountsd )
+SLOT=0
+SRC_URI=http://www.freedesktop.org/software/accountsservice/accountsservice-0.6.39.tar.xz
+_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=f41f4cb2cfbc041f49fcbf0ab7d4b5a8
