@@ -3,23 +3,15 @@ Hash: SHA256
 
 AUX accountsservice-0.6.35-gentoo-system-users.patch 1118 SHA256 c1b7fd9f6f36a670879f9bd35e1b904e5f97384f33eb1153feaabfb57f7525b9 SHA512 89bd45ec30f58ea9b3af17ee2217ff7c8a05a6a0da47646da540b24011c01963bb6bdb9599ec02ba4c1fe1c70bdb84f760e3046ac79c4f2d315880cbf58d6684 WHIRLPOOL 00c4563e4ff5f2a9775833f8f48f76be2dd9de961250a35af32c3b923cb6099c6fad244595c65fa7f27ff3b3601cb45cdd8d8e8ae7d9d9d6afa618a9484c6fd3
 DIST accountsservice-0.6.37.tar.xz 363244 SHA256 b0b21136dc9d74a7135fd5ed7fa1a8069efb91bc6ecc1ef8911125433345a5c1 SHA512 c6014da6796ed384c02f9171bb47cdbc5da61d80d53adbc3120c19a1166caa2ede2a6e676cfc6ddf2b953e78a290b70d86a5bf1af10c428e215a875878cc816c WHIRLPOOL 0287d845e04d2c134fd88b4e1c281a7e193844c691f8c61f48efa81e680b7fe98008b742d641dc7bf41ba64c949287997a84648d983c9062750adddf8d7fbdff
+DIST accountsservice-0.6.39.tar.xz 367648 SHA256 f938a3d517ddd44c7605b49f11028198071906e0fde96f22c7e16d1eb275335d SHA512 b72f2edf95b7df5b38c75fbe4be2581384f7ff3631248a9fd2a523a13638e2c9c8933f195b8991a7138a556786531258b00878dc1a68863b616d2d2a17cbcf33 WHIRLPOOL 34b199ea220a8a34743ded82fba37b1ce90f7aafc9b7c1eb5988ef772d5d1f4d5283267327370d5a26966cc5370549323ffd2a9645bead9700b1a53dd5afe9bf
 EBUILD accountsservice-0.6.37.ebuild 1539 SHA256 7cc0a46bd7b10532612a08387ad394eb13e5ea21edde927e1f81679ac48e2ae9 SHA512 421c554b1b72ac21bf1e1977476c276ee2a4dea2533697714d9c3faa230f7a7e5ecf5ea96335c3991a41a787386719fafb24fc5347296d56494f9b670dad5587 WHIRLPOOL e4499a743b3c47cad07e17dab378d7a1aa8c217e4ee4c05084c84255ceb69222cce8d068297879e3f20e43899fef3d33e94ae17bd5140220ae499de535c39b93
-MISC ChangeLog 9047 SHA256 d1e11255285ff2a3db2a384ba4afda7e8ba3d32b1032d2e380d220629561d6e7 SHA512 02adb1c83bc004594d920e19a8d01e627b380427d19c363940eb360d380154d3686e64160263a98c492c4b08383e7ace1f6f750a3639693019b00c418d6e41b6 WHIRLPOOL 152309c9ef4fc98f7f4a1bc623021555bfd6bdd04925779553a3e87263a6c13f36c6ac6691b1e415c9e2afd6930d653e5fd9d0ff1bd4d5091b5af21d1bc31a0b
+EBUILD accountsservice-0.6.39.ebuild 1542 SHA256 55385f29897fbbdc16d96bdcf8f88b9927d0692ad1f0d2c4aaad6a6187a08a1f SHA512 68410d566591a24db4b691a3ef3308299d2ea3ba958b8598adf0c493618211f8e4be3931db97cf501c8b714cc0ab56f3772b218c513946f738ee6d49dad876ab WHIRLPOOL 87f23bebc238c0022d890320704381792b2cfa0e33a3084786c66b0637c07a4922dd86f000b83c059fb75fb67c380178ae9681d2cc5089266af19f3ee94c8287
+MISC ChangeLog 9189 SHA256 a5a317ec97755bd646b1c78abfe4e5a9fbeda74b3b9937a56ee0b2c542b5c125 SHA512 c66b8a073fd5c6d0290ffb09c7eeaf3aa23060a2d30c3a0aed25dfe56a4e52b5c137d18c7dd06f187c09eeee793500c349b92234c772f0fe94e430b51a7e0e0f WHIRLPOOL aeb8bdb33163750c1b412fbc567deabf9ef2f9c04993d5fdb608860328a4ebe2dd9a38520f7f2b6055eed4f4c4093298b4b6e4e76c4a4a845fa6e955f4c333f5
 MISC metadata.xml 302 SHA256 a20f103b3d76caf40fe559f678f6eb190308e88082b286c1d21cb3c4a832f77f SHA512 0b16c01be0afddaba5e98931d1b9146e2bcb924eab6f4fbc3dbe5089c930aff31cc99ffab41551cc4264db2002f995a05794936078476041eb64464b27956440 WHIRLPOOL ed162fabcb758b1e1476df6f92bcf00f52f69a523662ab2c5fafe707cd214ae5521315287449a8c179158d1c9cefea4b0b4ad5342f7020292737ad65a3e7cbe3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUVfw1AAoJEC7dUkA7aK9HmvQP/2lF+B4mb+mI2OsLEW4T3pDD
-66+YVw34DnkS/QV15Maf3efiklJ7biJyruXM275kKpOckUP6pRB/OSlJuOr7ZYoZ
-8/LZ1hNmkia2pecbkk60xTVmacPZ4F0u9tDH60UAPURcy5cJqfahTzDIFM1L84u4
-Kw63Vla0YYtF1uzTxYg+bkHTfO08Xlo5vBl9GaDN8LehRDhTU8i/mFUExYrHxjaV
-TR9fzh8k72BvDrfXLAXPsgC4KCZpOEnDLoAefVD5Ot6Rk9Usc7zXzWVzauO76yeG
-tlZ5dXCydeMmiO4yWUZBk9TCXIzinFu8TqV/CHTA1fcfj4zAYPCX+ezjloU0Vwfe
-rXS0AdyuaCcgv85QJLVAw+o2StJhFcOwm5BcpgoT1ZdpcPXSsBvPxAIG5/mPdOZ2
-L/i4iL0Id7SOgGl805DUvDYBGuprZpdLL1itqLM5cLkvcjnhs7cp98DBJx6WtMaR
-1XzGD1NB0EGVq8nQCE7V/AimZfRkLgzrVlV5jGQptJnR0bLysFo7TzV+uMd8aBFq
-0lflTr0uim5S5IhPkjKz0uPlYhU17ZHD+CxFo+rZuPUOSqz+PClABBFCppAmKWqY
-zRGhR4aM9dz5DlRsjIpN0RNTpJoVBkp85locU1d1s7DtmLb73939utOEnqxUL+0B
-FxQG4PCOB3P1BmJ8PvGa
-=8vti
+iEYEAREIAAYFAlRWVgYACgkQ1fmVwcYIWAa+AgCffeCbliz8nPBu01gvFZW0Z5bA
+LxkAoNpKVyZbtx1kbtLjbcffeKQ7iBCd
+=KiuA
 -----END PGP SIGNATURE-----
